--- a/index.html
+++ b/index.html
@@ -3,81 +3,91 @@
 <head>
   <title>Math Calculator</title>
   <style>
-    /* Mobile-friendly styles */
     body {
-      max-width: 400px;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 600px;
       margin: 0 auto;
       padding: 20px;
     }
-  
-    form {
+
+    .title {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .form-group {
       margin-bottom: 20px;
     }
-  
-    input[type="number"] {
-      width: 100%;
-      margin-bottom: 10px;
-    }
-  
-    button {
+
+    .form-group label {
       display: block;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+
+    .form-group input[type="number"] {
       width: 100%;
-      margin-top: 10px;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
     }
-  
-    h2 {
-      margin-top: 20px;
+
+    .button-container {
+      display: flex;
+      justify-content: center;
     }
-  
-    p {
+
+    .calculate-button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .result-container {
+      margin-top: 30px;
+    }
+
+    .result {
       margin-bottom: 10px;
-    }
-  
-    /* Responsive styles for larger screens */
-    @media screen and (min-width: 600px) {
-      body {
-        max-width: 600px;
-      }
-  
-      form {
-        display: flex;
-        justify-content: space-between;
-      }
-  
-      input[type="number"] {
-        width: 45%;
-      }
-  
-      button {
-        width: 100px;
-        margin-top: 0;
-        align-self: flex-end;
-      }
-  
-      h2 {
-        margin-top: 30px;
-      }
     }
   </style>
 </head>
 <body>
-  <h1>Math Calculator</h1>
-  
-  <form onsubmit="event.preventDefault(); calculate();">
-    <label for="number1">Number 1:</label>
-    <input type="number" id="number1" required>
+  <div class="container">
+    <h1 class="title">Math Calculator</h1>
 
-    <label for="number2">Number 2:</label>
-    <input type="number" id="number2" required>
+    <div class="form-group">
+      <label for="number1">Number 1:</label>
+      <input type="number" id="number1" required>
+    </div>
 
-    <button type="submit">Calculate</button>
-  </form>
+    <div class="form-group">
+      <label for="number2">Number 2:</label>
+      <input type="number" id="number2" required>
+    </div>
 
-  <h2>Results:</h2>
-  <p id="sum"></p>
-  <p id="difference"></p>
-  <p id="product"></p>
-  <p id="quotient"></p>
+    <div class="button-container">
+      <button class="calculate-button" onclick="calculate()">Calculate</button>
+    </div>
+
+    <div class="result-container">
+      <h2>Results:</h2>
+      <p class="result" id="sum"></p>
+      <p class="result" id="difference"></p>
+      <p class="result" id="product"></p>
+      <p class="result" id="quotient"></p>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
