add ingredient section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
     </div>
 
     <div class="result-container">
+      <h2>Prepare the ingredients:</h2>
+      <p class="result" id="spiceClovePrepare"></p>
+      <p class="result" id="spiceCardamomPrepare"></p>
+      <p class="result" id="spiceCinnamonPrepare"></p>
+
       <h2>Steps to Make the Food Dish:</h2>
       <p class="result" id="riceStep"></p>
       <p class="result" id="waterStep"></p>
