added awesome in result container steps

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <p class="result" id="spiceCardamomPrepare"></p>
       <p class="result" id="spiceCinnamonPrepare"></p>
 
-      <h2>Steps to Make the Food Dish:</h2>
+      <h2>Steps to Make the Food Dish awesome:</h2>
       <p class="result" id="riceStep"></p>
       <p class="result" id="waterStep"></p>
     </div>
