--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
 
     <div class="result-container">
-      <h2>Prepare the ingredients:</h2>
+      <h2>Prepare the ingredients awesome:</h2>
       <p class="result" id="spiceClovePrepare"></p>
       <p class="result" id="spiceCardamomPrepare"></p>
       <p class="result" id="spiceCinnamonPrepare"></p>
